--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,7 +8,7 @@
 }
 /*shared style*/S
 
-.tex{
+.texter{
     color: #FD6E0A;
     
 }
@@ -110,7 +110,7 @@ font-weight: 600;
 }
 .banner-description{
 
-    color: #FFF8F3;
+    color: #757575;
     font-size: 18px;
 }
 
