--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -47,7 +47,8 @@ color: #757575;
 
 /*header*/
 .header{
-    background-image: url('/images/developer.png'),url('/images/header_bg.png');
+
+background-image: url('../images/developer.png'),url('../images/header_bg.png');
     background-repeat:no-repeat;
     background-position: top left,bottom right;
 }
